--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,11 @@
     "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
